fix popup from going off screen & overlapping form, add second toast

--- a/client/styles/Demo.module.css
+++ b/client/styles/Demo.module.css
@@ -9,7 +9,7 @@
 }
 
 .progressGoals {
-  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .modalBtn {
